# oop2Lab

./: Brake.cpp  Brake.h  CMakeLists.txt  Car.cpp  Car.h  Constants.h  Dashboard.cpp  Dashboard.h  Engine.cpp  Engine.h  FuelTank.cpp  FuelTank.h  Transmission.cpp  Transmission.h  main.cpp
